--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "core-js": "3.15.2",
     "dayjs": "1.8.20",
+    "echarts": "^5.2.2",
     "register-service-worker": "1.7.2",
     "svg-sprite-loader-mod": "^4.1.6-mod1",
     "svgo-loader": "^2.2.1",
     "vue": "2.6.14",
     "vue-class-component": "7.2.6",
+    "vue-echarts": "^6.0.0",
     "vue-property-decorator": "9.1.2",
     "vue-router": "3.5.2",
     "vuex": "3.6.2"
@@ -32,6 +34,7 @@
     "@vue/cli-plugin-unit-jest": "4.5.13",
     "@vue/cli-plugin-vuex": "4.5.13",
     "@vue/cli-service": "4.5.13",
+    "@vue/composition-api": "^1.4.3",
     "@vue/eslint-config-typescript": "7.0.0",
     "@vue/test-utils": "1.2.2",
     "eslint": "6.8.0",
