--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "3.15.2",
     "dayjs": "1.8.20",
     "echarts": "^5.2.2",
+    "lodash": "^4.17.21",
     "register-service-worker": "1.7.2",
     "svg-sprite-loader-mod": "^4.1.6-mod1",
     "svgo-loader": "^2.2.1",
@@ -23,7 +24,9 @@
     "vuex": "3.6.2"
   },
   "devDependencies": {
+    "@types/echarts": "^4.9.12",
     "@types/jest": "24.0.25",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "4.28.4",
     "@typescript-eslint/parser": "4.28.4",
     "@vue/cli-plugin-babel": "4.5.13",
