--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "3.15.2",
     "dayjs": "1.8.20",
     "echarts": "^5.2.2",
+    "element-ui": "^2.15.6",
     "lodash": "^4.17.21",
     "register-service-worker": "1.7.2",
     "svg-sprite-loader-mod": "^4.1.6-mod1",
