--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:dev": "cross-env NODE_ENV=development yarn build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "3.15.2",
+    "cross-env": "^7.0.3",
     "dayjs": "1.8.20",
     "echarts": "^5.2.2",
     "element-ui": "^2.15.6",
